2005-08-25  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (developer_zip_file): Include the documentation, too.

2005-08-24  Billy Biggs  <vektor@dumbterm.net>

	* doc/public/tmpl/cairo-font-options.sgml:
	* doc/public/tmpl/cairo-font.sgml:
	* doc/public/tmpl/cairo-ft.sgml:
	* doc/public/tmpl/cairo-glitz.sgml:
	* doc/public/tmpl/cairo-image.sgml:
	* doc/public/tmpl/cairo-matrix.sgml:
	* doc/public/tmpl/cairo-paths.sgml:
	* doc/public/tmpl/cairo-pattern.sgml:
	* doc/public/tmpl/cairo-pdf.sgml:
	* doc/public/tmpl/cairo-png.sgml:
	* doc/public/tmpl/cairo-ps.sgml:
	* doc/public/tmpl/cairo-quartz.sgml:
	* doc/public/tmpl/cairo-scaled-font.sgml:
	* doc/public/tmpl/cairo-status.sgml:
	* doc/public/tmpl/cairo-surface.sgml:
	* doc/public/tmpl/cairo-text.sgml:
	* doc/public/tmpl/cairo-transforms.sgml:
	* doc/public/tmpl/cairo-types.sgml:
	* doc/public/tmpl/cairo-version.sgml:
	* doc/public/tmpl/cairo-win32-fonts.sgml:
	* doc/public/tmpl/cairo-win32.sgml:
	* doc/public/tmpl/cairo-xcb-xrender.sgml:
	* doc/public/tmpl/cairo-xcb.sgml:
	* doc/public/tmpl/cairo-xlib.sgml:
	* doc/public/tmpl/cairo.sgml: Update formatting of the title
	and short description, as this actually changes how the TOC
	appears in devhelp.

2005-08-24  Bertram Felgenhauer  <int-e@gmx.de>

	* Makefile.am (.PHONY): add docs-publish as a phony target

2005-08-24  Carl Worth  <cworth@cworth.org>

	* configure.in: Increment CAIRO_VERSION to 1.0.1 after tagging
	RELEASE_1_0_0.
	
2005-08-24  Carl Worth  <cworth@cworth.org>

	* configure.in: Increment CAIRO_VERSION to 1.0.0 and libtool
	versioning to 4:2:2.

2005-08-24  Carl Worth  <cworth@cworth.org>

	* NEWS: Fix typos. Add CAIRO_STATUS_INVALID_DASH.

2005-08-24  Carl Worth  <cworth@cworth.org>

	* README: Unabbreviate "eg." to "for example,".

2005-08-24  Carl Worth  <cworth@cworth.org>

	* PORTING_GUIDE: Update name from "0.5 porting guide" to "1.0
	porting guide."

2005-08-24  Carl Worth  <cworth@cworth.org>
	
	* README: Some text cleanups from Øyvind Kolås.